--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=keyboard_double_arrow_up" />
   <link rel="stylesheet" href="./styles/style.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -39,12 +41,13 @@
                 <a class="nav-link dropdown-toggle agdasima-bold text-dark" href="#" data-bs-toggle="dropdown"
                   aria-expanded="false">Socials</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item text-dark agdasima-bold" href="#"><img
-                        src="./assets/images/linkedin-nav.png">
+                  <li><a class="dropdown-item text-dark agdasima-bold" href="https://www.linkedin.com/in/marcbiengo/"
+                      target="_blank"><img src="./assets/images/linkedin-nav.png">
                       LinkedIn</a></li>
-                  <li><a class="dropdown-item text-dark agdasima-bold" href="#"><img
-                        src="./assets/images/github-nav.png">GitHub</a></li>
-                  <li><a class="dropdown-item text-dark agdasima-bold" href="#"><img
+                  <li><a class="dropdown-item text-dark agdasima-bold" href="https://github.com/MarcBienGo"
+                      target="_blank"><img src="./assets/images/github-nav.png">GitHub</a></li>
+                  <li><a class="dropdown-item text-dark agdasima-bold"
+                      href="https://www.reddit.com/user/KingDreamweaver/" target="_blank"><img
                         src="./assets/images/reddit-nav.png">Reddit</a></li>
                 </ul>
               </li>
@@ -203,13 +206,13 @@
                     alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title agdasima-bold">Cosmos Conquest</h5>
-                    <p class="card-text">A game developed for one of my web development introductory courses.
-                      <br><br>Mobile not yet supported.
+                    <p class="card-text skill-text">A game developed for one of my web development introductory courses.
+                      <br>Mobile not yet supported.
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <a href="https://marcbiengo.github.io/cosmos-conquest/" target="_blank"><button type="button"
-                            class="btn btn-sm btn-outline-secondary">Play the game!</button></a>
+                            class="btn btn-sm btn-outline-secondary album-btn-text">Play the game!</button></a>
                       </div>
                     </div>
                   </div>
@@ -221,11 +224,12 @@
                   </svg>
                   <div class="card-body">
                     <h5 class="card-title agdasima-bold">Old Resume Website</h5>
-                    <p class="card-text">My very first resume website. <br><br>A reminder of my humble beginnings.</p>
+                    <p class="card-text skill-text">My very first resume website. <br><br>A reminder of my humble
+                      beginnings.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <a href="https://marcbiengo.github.io/old-resume-website/" target="_blank"><button type="button"
-                            class="btn btn-sm btn-outline-secondary">View</button></a>
+                            class="btn btn-sm btn-outline-secondary album-btn-text">View</button></a>
                       </div>
                     </div>
                   </div>
@@ -238,12 +242,13 @@
                   </svg>
                   <div class="card-body">
                     <h5 class="card-title agdasima-bold">Doovop</h5>
-                    <p class="card-text">The in-house bug and task tracking system I've created for my previous
+                    <p class="card-text skill-text">The in-house bug and task tracking system I've created for my
+                      previous
                       employer. To this day, this is the most sophisticated system that I've built.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <a href="./public/doovop.html" target="_blank"><button type="button"
-                            class="btn btn-sm btn-outline-secondary">View</button></a>
+                            class="btn btn-sm btn-outline-secondary album-btn-text">View</button></a>
                       </div>
                     </div>
                   </div>
@@ -255,7 +260,15 @@
     </section>
 
     <section id="doovop">
-      
+
+    </section>
+
+    <section id="back-to-top">
+      <div class="container to-top">
+        <a class="text-dark" href="#navigation"><span class="material-symbols-outlined">
+          keyboard_double_arrow_up
+          </span></a>
+      </div>
     </section>
 
     <section id="footer">
@@ -271,20 +284,22 @@
           </div>
 
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-body-secondary" href="#"><svg xmlns="http://www.w3.org/2000/svg" x="0px"
-                  y="0px" width="50" height="50" viewBox="0 0 50 50">
+            <li class="ms-3"><a class="text-body-secondary" href="https://www.linkedin.com/in/marcbiengo/"
+                target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50"
+                  viewBox="0 0 50 50">
                   <path
                     d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z">
                   </path>
                 </svg></a></li>
-            <li class="ms-3"><a class="text-body-secondary" href="#"><svg xmlns="http://www.w3.org/2000/svg" x="0px"
-                  y="0px" width="50" height="50" viewBox="0 0 24 24">
+            <li class="ms-3"><a class="text-body-secondary" href="https://github.com/MarcBienGo" target="_blank"><svg
+                  xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 24 24">
                   <path
                     d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.5,4.7,2.2,8.9,6.3,10.5C8.7,21.4,9,21.2,9,20.8v-1.6c0,0-0.4,0.1-0.9,0.1 c-1.4,0-2-1.2-2.1-1.9c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1 c0.4,0,0.7-0.1,0.9-0.2c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6c0-0.4,0-0.9,0.2-1.3 C7.2,6.1,7.4,6,7.5,6c0,0,0.1,0,0.1,0C8.1,6.1,9.1,6.4,10,7.3C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3c0.9-0.9,2-1.2,2.5-1.3 c0,0,0.1,0,0.1,0c0.2,0,0.3,0.1,0.4,0.3C17,6.7,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3c0,2.2-1.7,3.5-4,4 c0.6,0.5,1,1.4,1,2.3v2.6c0,0.3,0.3,0.6,0.7,0.5c3.7-1.5,6.3-5.1,6.3-9.3C22,6.1,16.9,1.4,10.9,2.1z">
                   </path>
                 </svg></a></li>
-            <li class="ms-3"><a class="text-body-secondary" href="#"><svg xmlns="http://www.w3.org/2000/svg" x="0px"
-                  y="0px" width="50" height="50" viewBox="0 0 64 64">
+            <li class="ms-3"><a class="text-body-secondary" href="https://www.reddit.com/user/KingDreamweaver/"
+                target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50"
+                  viewBox="0 0 64 64">
                   <path
                     d="M 32 10 C 19.85 10 10 19.85 10 32 C 10 44.15 19.85 54 32 54 C 44.15 54 54 44.15 54 32 C 54 19.85 44.15 10 32 10 z M 33.529297 18.787109 C 33.616453 18.771266 33.707328 18.772469 33.798828 18.792969 L 39.191406 19.869141 C 39.535406 19.268141 40.159516 18.863969 40.853516 18.792969 C 42.062516 18.661969 43.144391 19.536141 43.275391 20.744141 C 43.406391 21.953141 42.532219 23.036969 41.324219 23.167969 C 40.115219 23.298969 39.031391 22.425797 38.900391 21.216797 L 34.193359 20.226562 L 32.765625 27.089844 C 35.789625 27.155844 38.731328 28.090875 41.236328 29.796875 C 41.804328 29.255875 42.554797 28.931297 43.341797 28.904297 C 45.118797 28.844297 46.605875 30.228 46.671875 32 C 46.693875 33.236 45.999531 34.372781 44.894531 34.925781 C 44.916531 35.247781 44.916531 35.571531 44.894531 35.894531 C 44.894531 40.827531 39.152312 44.830078 32.070312 44.830078 C 24.988313 44.830078 19.246094 40.821531 19.246094 35.894531 C 19.224094 35.571531 19.224094 35.248781 19.246094 34.925781 C 18.923094 34.783781 18.633813 34.580703 18.382812 34.345703 C 17.086812 33.131703 17.026234 31.097641 18.240234 29.806641 C 19.454234 28.510641 21.488297 28.450063 22.779297 29.664062 C 25.316297 27.947062 28.297375 27.006031 31.359375 26.957031 L 32.984375 19.324219 L 32.984375 19.3125 C 33.045875 19.0335 33.267828 18.834641 33.529297 18.787109 z M 26.873047 32 C 25.657047 32 24.671875 32.985172 24.671875 34.201172 C 24.671875 35.417172 25.658047 36.402344 26.873047 36.402344 C 28.089047 36.402344 29.074219 35.416172 29.074219 34.201172 C 29.074219 32.985172 28.088047 32 26.873047 32 z M 37.0625 32 C 35.8475 32 34.862328 32.985172 34.861328 34.201172 C 34.861328 35.417172 35.8475 36.402344 37.0625 36.402344 C 38.2785 36.402344 39.263672 35.416172 39.263672 34.201172 C 39.263672 32.985172 38.2775 32 37.0625 32 z M 27.039062 39.279297 C 26.905687 39.279297 26.771609 39.324062 26.662109 39.414062 C 26.410109 39.622062 26.372078 39.999953 26.580078 40.251953 C 28.144078 41.427953 30.059578 42.029266 32.017578 41.947266 C 33.975578 42.029266 35.889125 41.427953 37.453125 40.251953 L 37.453125 40.339844 C 37.694125 40.103844 37.699844 39.711703 37.464844 39.470703 C 37.229844 39.229703 36.83475 39.223984 36.59375 39.458984 C 35.25375 40.415984 33.634141 40.885828 31.994141 40.798828 C 30.354141 40.874828 28.740969 40.382062 27.417969 39.414062 C 27.305969 39.324062 27.172438 39.279297 27.039062 39.279297 z">
                   </path>
