Added image fluidity

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
               <div class="col">
                 <div class="card shadow-sm">
-                  <img class="card-img-top" src="./assets/images/cosmos-conquest-thumbnail.png" height="300"
+                  <img class="card-img-top img-fluid" src="./assets/images/cosmos-conquest-thumbnail.png" height="300"
                     alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title agdasima-bold">Cosmos Conquest</h5>
@@ -220,7 +220,7 @@
               </div>
               <div class="col">
                 <div class="card shadow-sm">
-                  <img class="card-img-top" src="./assets/images/resume-website.png" height="300" alt="Card image cap">
+                  <img class="card-img-top img-fluid" src="./assets/images/resume-website.png" height="300" alt="Card image cap">
                   </svg>
                   <div class="card-body">
                     <h5 class="card-title agdasima-bold">Old Resume Website</h5>
@@ -237,7 +237,7 @@
               </div>
               <div class="col">
                 <div class="card shadow-sm">
-                  <img class="card-img-top" src="./assets/images/doovop.png" height="300" alt="Card image cap">
+                  <img class="card-img-top img-fluid" src="./assets/images/doovop.png" height="300" alt="Card image cap">
                   <title>Doovop</title>
                   </svg>
                   <div class="card-body">
