--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           </div>
           <div class="row row-cols-1">
             <div class="form-group to-top">
-              <input type="submit" name="btnSubmit" class="btn btn-outline-dark contact-btn" value="Send Message" />
+              <button class="btn btn-outline-dark contact-btn">Send Message</button>
             </div>
           </div>
         </form>
