--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-    <script src="./scripts/script.js" defer></script>
+  <script src="./scripts/script.js" defer></script>
   <title>Marc Bien Go</title>
 </head>
 
@@ -42,13 +42,16 @@
               </li>
               <li class="nav-item dropdown agdasima-bold">
                 <a class="nav-link dropdown-toggle agdasima-bold text-dark" href="#" data-bs-toggle="dropdown"
-                  aria-expanded="false">Socials</a>
+                  aria-expanded="false">Platforms</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item text-dark agdasima-bold" href="https://www.linkedin.com/in/marcbiengo/"
                       target="_blank"><img src="./assets/images/linkedin-nav.png">
                       LinkedIn</a></li>
                   <li><a class="dropdown-item text-dark agdasima-bold" href="https://github.com/MarcBienGo"
                       target="_blank"><img src="./assets/images/github-nav.png">GitHub</a></li>
+                  <li><a class="dropdown-item text-dark agdasima-bold"
+                      href="https://stackoverflow.com/users/6448104/marc-bien-go" target="_blank"><img
+                        src="./assets/images/stack-overflow-nav.png">Stack Overflow</a></li>
                   <li><a class="dropdown-item text-dark agdasima-bold"
                       href="https://www.reddit.com/user/KingDreamweaver/" target="_blank"><img
                         src="./assets/images/reddit-nav.png">Reddit</a></li>
@@ -259,15 +262,18 @@
                 <input type="text" name="txtName" class="form-control skill-text" placeholder="Your name..*" value="" />
               </div>
               <div class="form-group my-2">
-                <input type="text" name="txtEmail" class="form-control skill-text" placeholder="Your email.. *" value="" />
+                <input type="text" name="txtEmail" class="form-control skill-text" placeholder="Your email.. *"
+                  value="" />
               </div>
               <div class="form-group my-2">
-                <input type="text" name="txtPhone" class="form-control skill-text" placeholder="Your phone number.. *" value="" />
+                <input type="text" name="txtPhone" class="form-control skill-text" placeholder="Your phone number.. *"
+                  value="" />
               </div>
             </div>
             <div class="col-12 col-lg-8 col-md-8 col-sm-12 ">
               <div class="form-group">
-                <textarea name="txtMsg" class="contact-message form-control skill-text" placeholder="Your Message *"></textarea>
+                <textarea name="txtMsg" class="contact-message form-control skill-text"
+                  placeholder="Your Message *"></textarea>
               </div>
             </div>
           </div>
@@ -312,6 +318,13 @@
                   xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 24 24">
                   <path
                     d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.5,4.7,2.2,8.9,6.3,10.5C8.7,21.4,9,21.2,9,20.8v-1.6c0,0-0.4,0.1-0.9,0.1 c-1.4,0-2-1.2-2.1-1.9c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1 c0.4,0,0.7-0.1,0.9-0.2c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6c0-0.4,0-0.9,0.2-1.3 C7.2,6.1,7.4,6,7.5,6c0,0,0.1,0,0.1,0C8.1,6.1,9.1,6.4,10,7.3C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3c0.9-0.9,2-1.2,2.5-1.3 c0,0,0.1,0,0.1,0c0.2,0,0.3,0.1,0.4,0.3C17,6.7,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4c0.7,0.8,1.2,1.8,1.2,3c0,2.2-1.7,3.5-4,4 c0.6,0.5,1,1.4,1,2.3v2.6c0,0.3,0.3,0.6,0.7,0.5c3.7-1.5,6.3-5.1,6.3-9.3C22,6.1,16.9,1.4,10.9,2.1z">
+                  </path>
+                </svg></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="https://stackoverflow.com/users/6448104/marc-bien-go"
+                target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50"
+                  viewBox="0 0 32 32">
+                  <path
+                    d="M 19.59375 2.84375 L 17.96875 3.96875 L 23.5625 12.1875 L 25.1875 11.0625 Z M 15.375 6.53125 L 14.0625 8.03125 L 21.5625 14.53125 L 22.875 13.03125 Z M 12.375 10.90625 L 11.46875 12.6875 L 20.3125 17.1875 L 21.21875 15.40625 Z M 10.65625 15.4375 L 10.21875 17.375 L 19.875 19.65625 L 20.3125 17.71875 Z M 6 18 L 6 29 L 24 29 L 24 18 L 22 18 L 22 27 L 8 27 L 8 18 Z M 10.09375 19.6875 L 9.96875 21.6875 L 19.875 22.25 L 20 20.25 Z M 10 23 L 10 25 L 19.9375 25 L 19.9375 23 Z">
                   </path>
                 </svg></a></li>
             <li class="ms-3"><a class="text-body-secondary" href="https://www.reddit.com/user/KingDreamweaver/"
