--- a/index.html
+++ b/index.html
@@ -179,8 +179,29 @@
         <h2 class="pb-2 border-bottom agdasima-bold hidden">What I've worked on:</h2>
         <div class="album py-5 bg-body-light">
           <div class="container agdasima-regular">
-
             <div id="project-cards" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+              <div class="col hidden">
+                <div class="card shadow-sm">
+                  <img class="card-img-top" src="./assets/images/doovop.png" height="300" alt="Card image cap">
+                  <title>Doovop</title>
+                  </svg>
+                  <div class="card-body">
+                    <h5 class="card-title agdasima-bold">Doovop</h5>
+                    <p class="card-text skill-text">The in-house bug and task tracking system I've created for my
+                      previous
+                      employer. To this day, this is the most sophisticated system that I've built.
+                      <br>
+                      <br>Language(s) used: JavaScript, CSS, HTML, PHP, MySQL
+                    </p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <a href="#projects" onclick="workInProgress();"><button type="button"
+                            class="btn btn-outline-dark album-btn-text">Know more!</button></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="col hidden">
                 <div class="card shadow-sm">
                   <img class="card-img-top window-card " src="./assets/images/cosmos-conquest-thumbnail.png"
@@ -217,28 +238,6 @@
                       <div class="btn-group">
                         <a href="https://marcbiengo.github.io/old-resume-website/" target="_blank"><button type="button"
                             class="btn btn-outline-dark album-btn-text">Take a peek!</button></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col hidden">
-                <div class="card shadow-sm">
-                  <img class="card-img-top" src="./assets/images/doovop.png" height="300" alt="Card image cap">
-                  <title>Doovop</title>
-                  </svg>
-                  <div class="card-body">
-                    <h5 class="card-title agdasima-bold">Doovop</h5>
-                    <p class="card-text skill-text">The in-house bug and task tracking system I've created for my
-                      previous
-                      employer. To this day, this is the most sophisticated system that I've built.
-                      <br>
-                      <br>Language(s) used: JavaScript, CSS, HTML, PHP, MySQL
-                    </p>
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="btn-group">
-                        <a href="./public/doovop.html" target="_blank"><button type="button"
-                            class="btn btn-outline-dark album-btn-text">Know more!</button></a>
                       </div>
                     </div>
                   </div>
